force-app/main/default/objects/Lead/fields/AnoNacimiento__c.field-meta.xml
<CustomField>
    <fullName>AnoNacimiento__c</fullName>
    <label>Año nacimiento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>