force-app/main/default/objects/Lead/fields/ApellidosFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>ApellidosFamiliarAllegado__c</fullName>
    <description>Apellidos del familiar o allegado</description>
    <label>Apellidos Familiar/ Allegado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>