force-app/main/default/objects/Lead/fields/CodigoDeCentro__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeCentro__c</fullName>
    <description>Código de centro de la residencia de preferencia que viene de formulario web</description>
    <label>Código de Centro</label>
    <length>4</length>
    <type>Text</type>
</CustomField>