force-app/main/default/objects/Lead/fields/Comunidad__c.field-meta.xml
<CustomField>
    <fullName>Comunidad__c</fullName>
    <description>Comunidad donde Amavir tiene ubicación de residencias</description>
    <label>Comunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Comunidad</valueSetName>
    </valueSet>
</CustomField>