force-app/main/default/objects/Lead/fields/ConscienteDeSuIngresoEnElCentro__c.field-meta.xml
<CustomField>
    <fullName>ConscienteDeSuIngresoEnElCentro__c</fullName>
    <description>Nos dice si el residente es consciente de su ingreso en el centro</description>
    <label>¿Consciente de su ingreso en el centro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>