force-app/main/default/objects/Lead/fields/ContactoFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>ContactoFamiliarAllegado__c</fullName>
    <description>Nombre de la persona que contacta distinta del residente</description>
    <label>Nombre Familiar/ Allegado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>