force-app/main/default/objects/Lead/fields/Convertido__c.field-meta.xml
<CustomField>
    <fullName>Convertido__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que se mapea a contacto para indicar que el contacto vienen de la conversión</description>
    <label>Convertido</label>
    <type>Checkbox</type>
</CustomField>