force-app/main/default/objects/Lead/fields/ConVisita__c.field-meta.xml
<CustomField>
    <fullName>ConVisita__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado en el flujo de evento de tipo visita para registrar que el candidato ha hecho visita</description>
    <label>Con Visita</label>
    <type>Checkbox</type>
</CustomField>