force-app/main/default/objects/Lead/fields/CorreoElectronicoFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoFamiliarAllegado__c</fullName>
    <description>Correo electrónico del familiar que contacta</description>
    <label>Correo electrónico Familiar/Allegado</label>
    <type>Email</type>
</CustomField>