force-app/main/default/objects/Lead/fields/Desorientado__c.field-meta.xml
<CustomField>
    <fullName>Desorientado__c</fullName>
    <description>Nos dice si el residente está desorientado</description>
    <label>Desorientado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>