force-app/main/default/objects/Lead/fields/DetalleMotivoIngreso__c.field-meta.xml
<CustomField>
    <fullName>DetalleMotivoIngreso__c</fullName>
    <description>Campo de tipo lista de selección para conocer el detalle motivo de ingreso</description>
    <label>Detalle Motivo de Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MotivoIngreso__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DetalleMotivoIngreso</valueSetName>
    </valueSet>
</CustomField>