force-app/main/default/objects/Lead/fields/DetalleOrigen__c.field-meta.xml
<CustomField>
    <fullName>DetalleOrigen__c</fullName>
    <description>Detalle del origen de candidatos</description>
    <label>Detalle del medio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>DetalleOrigen</valueSetName>
    </valueSet>
</CustomField>