force-app/main/default/objects/Lead/fields/DetallePrescriptor__c.field-meta.xml
<CustomField>
    <fullName>DetallePrescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta Prescriptor relacionado con el candidato</description>
    <label>Prescriptor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Prescriptor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>