force-app/main/default/objects/Lead/fields/DocumentoEntregadoRecomendacionesIngreso__c.field-meta.xml
<CustomField>
    <fullName>DocumentoEntregadoRecomendacionesIngreso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de tipo casilla para saber si está entregado documento &quot;Recomendaciones para el Ingreso&quot;</description>
    <label>Documento &quot;Recomendaciones Ingreso&quot;</label>
    <type>Checkbox</type>
</CustomField>