force-app/main/default/objects/Lead/fields/DuermeBienPaciente__c.field-meta.xml
<CustomField>
    <fullName>DuermeBienPaciente__c</fullName>
    <description>Nos dice si el residente duerme bien</description>
    <label>¿Duerme bien?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>