force-app/main/default/objects/Lead/fields/EdadAproximadaFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>EdadAproximadaFamiliarAllegado__c</fullName>
    <description>Este campo nos indica la edad aproximada del contacto familiar/allegado</description>
    <label>Edad aproximada Familiar/Allegado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>