force-app/main/default/objects/Lead/fields/EmeregenciaSocial__c.field-meta.xml
<CustomField>
    <fullName>EmeregenciaSocial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si se trata de una emergencia social</description>
    <label>Emergencia social</label>
    <type>Checkbox</type>
</CustomField>