force-app/main/default/objects/Lead/fields/EncargadoTramiteAutorizacionInternam__c.field-meta.xml
<CustomField>
    <fullName>EncargadoTramiteAutorizacionInternam__c</fullName>
    <description>Campo de tipo selección para conocer quién se encargará del tramitar la solicitud de autorización de Internam.Judicial</description>
    <label>¿Quién se encarga de tramitarla?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SolicitudAutorizInternamJudicial__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>