force-app/main/default/objects/Lead/fields/EsAutonomoEnSusTraslados__c.field-meta.xml
<CustomField>
    <fullName>EsAutonomoEnSusTraslados__c</fullName>
    <label>¿Es autónomo en sus traslados?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>