force-app/main/default/objects/Lead/fields/EsFumador__c.field-meta.xml
<CustomField>
    <fullName>EsFumador__c</fullName>
    <description>Nos dice si el residente fuma</description>
    <label>¿Es fumador/a?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>