force-app/main/default/objects/Lead/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <description>Genero del residente: hombre o mujer</description>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genero</valueSetName>
    </valueSet>
</CustomField>