force-app/main/default/objects/Lead/fields/GradoDiscapacidad__c.field-meta.xml
<CustomField>
    <fullName>GradoDiscapacidad__c</fullName>
    <description>Grado de la discapacidad del residente</description>
    <label>Grado de discapacidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>