force-app/main/default/objects/Lead/fields/GradoEstadoLeyDependencia__c.field-meta.xml
<CustomField>
    <fullName>GradoEstadoLeyDependencia__c</fullName>
    <description>Grado de dependencia del residente</description>
    <label>Información sobre Ley de Dependencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradoEstadoLeyDependencia</valueSetName>
    </valueSet>
</CustomField>