force-app/main/default/objects/Lead/fields/HaPasadoCovid__c.field-meta.xml
<CustomField>
    <fullName>HaPasadoCovid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si ha superado el Covid 19</description>
    <label>Ha Pasado Covid</label>
    <type>Checkbox</type>
</CustomField>