force-app/main/default/objects/Lead/fields/Hospitalizado__c.field-meta.xml
<CustomField>
    <fullName>Hospitalizado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si el residente está hospitalizado actualmente</description>
    <label>Hospitalizado</label>
    <type>Checkbox</type>
</CustomField>