force-app/main/default/objects/Lead/fields/IncapacidadLegal__c.field-meta.xml
<CustomField>
    <fullName>IncapacidadLegal__c</fullName>
    <description>Estado de los trámites de incapacidad legal</description>
    <label>Incapacidad legal/ Curatela</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncapacidadLegal</valueSetName>
    </valueSet>
</CustomField>