force-app/main/default/objects/Lead/fields/Incontinencia__c.field-meta.xml
<CustomField>
    <fullName>Incontinencia__c</fullName>
    <description>Nos dice si el residente tiene incontinencias</description>
    <label>Incontinencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>