force-app/main/default/objects/Lead/fields/LeyDependenciaConcedida__c.field-meta.xml
<CustomField>
    <fullName>LeyDependenciaConcedida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LeyDependenciaConcedida</description>
    <label>Ley dependencia concedida</label>
    <type>Checkbox</type>
</CustomField>