force-app/main/default/objects/Lead/fields/MarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>MarketingCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para saber si el candidato es apto para ser sincronizado con Marketing Cloud</description>
    <label>Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>