force-app/main/default/objects/Lead/fields/MotivoDescarte__c.field-meta.xml
<CustomField>
    <fullName>MotivoDescarte__c</fullName>
    <description>Motivo de no conversión del candidato</description>
    <label>Motivo de descarte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Descontento / Atención tardía</fullName>
            </value>
            <value>
                <fullName>Distancia</fullName>
            </value>
            <value>
                <fullName>Duplicado</fullName>
            </value>
            <value>
                <fullName>El residente se niega</fullName>
            </value>
            <value>
                <fullName>Fallecimiento</fullName>
            </value>
            <value>
                <fullName>Falta de acuerdo familiar</fullName>
            </value>
            <value>
                <fullName>Hospitalización larga duración</fullName>
            </value>
            <value>
                <fullName>Información a largo plazo / Curiosidad</fullName>
            </value>
            <value>
                <fullName>Ingreso, derivación u otro producto Amavir</fullName>
            </value>
            <value>
                <fullName>No brinda datos o son erróneos / Imposibilidad de contactar</fullName>
            </value>
            <value>
                <fullName>No cumple requisitos de edad</fullName>
            </value>
            <value>
                <fullName>No disponen de transporte (CD)</fullName>
            </value>
            <value>
                <fullName>No interesa precio</fullName>
            </value>
            <value>
                <fullName>No se adapta a sus preferencias</fullName>
            </value>
            <value>
                <fullName>Otra residencia competencia / residencia pequeña / otra CC.AA.</fullName>
            </value>
            <value>
                <fullName>Otro recurso / Domicilio / Solucionado</fullName>
            </value>
            <value>
                <fullName>Plaza o producto no disponible</fullName>
            </value>
            <value>
                <fullName>Plaza pública (concedida, en espera, traslado)</fullName>
            </value>
            <value>
                <fullName>Recuperación</fullName>
            </value>
            <value>
                <fullName>Residencia pendiente de apertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>