force-app/main/default/objects/Lead/fields/NecesitaAyudaParaAsearse__c.field-meta.xml
<CustomField>
    <fullName>NecesitaAyudaParaAsearse__c</fullName>
    <description>Nos dice si el residente necesita ayuda para asearse</description>
    <label>¿Necesita Ayuda para Asearse?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>