force-app/main/default/objects/Lead/fields/NecesitaAyudaParaComer__c.field-meta.xml
<CustomField>
    <fullName>NecesitaAyudaParaComer__c</fullName>
    <description>Nos dice si el residente necesita ayuda para comer</description>
    <label>¿Necesita Ayuda para Comer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>