force-app/main/default/objects/Lead/fields/NecesitaAyudaParaVestirse__c.field-meta.xml
<CustomField>
    <fullName>NecesitaAyudaParaVestirse__c</fullName>
    <description>Nos dice si el residente necesita ayuda para vestirse</description>
    <label>¿Necesita Ayuda para Vestirse?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>