force-app/main/default/objects/Lead/fields/NumeroDelDocumentoFamiliarAllegado__c.field-meta.xml
<CustomField>
    <fullName>NumeroDelDocumentoFamiliarAllegado__c</fullName>
    <description>Número del documento del familiar que contacta</description>
    <label>Número del documento Familiar/Allegado</label>
    <type>TextArea</type>
</CustomField>