force-app/main/default/objects/Lead/fields/ObjetoAyuda__c.field-meta.xml
<CustomField>
    <fullName>ObjetoAyuda__c</fullName>
    <description>Campo de tipo lista de selección para conocer de qué se ayuda</description>
    <label>¿De que se ayuda?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Muletas</fullName>
            </value>
            <value>
                <fullName>Andador</fullName>
            </value>
            <value>
                <fullName>Silla Ruedas</fullName>
            </value>
            <value>
                <fullName>Silla Motor</fullName>
            </value>
            <value>
                <fullName>Bastón</fullName>
            </value>
            <value>
                <fullName>Apoyo de otra persona</fullName>
            </value>
            <value>
                <fullName>Grúa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>