force-app/main/default/objects/Lead/fields/OrigenConocimiento__c.field-meta.xml
<CustomField>
    <fullName>OrigenConocimiento__c</fullName>
    <description>Indica cómo el candidato ha conocido Amavir</description>
    <label>Origen de conocimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrigenConocimiento</valueSetName>
    </valueSet>
</CustomField>