force-app/main/default/objects/Lead/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <description>Parentesco o relacion del contacto familiar/ allegado con el residente</description>
    <label>Parentesco/ Relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parentesco</valueSetName>
    </valueSet>
</CustomField>