force-app/main/default/objects/Lead/fields/ProblemasDeDeglucion__c.field-meta.xml
<CustomField>
    <fullName>ProblemasDeDeglucion__c</fullName>
    <description>Nos dice si el residente tiene problemas de deglución</description>
    <label>Problemas de Deglución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>