force-app/main/default/objects/Lead/fields/ProductoInteres__c.field-meta.xml
<CustomField>
    <fullName>ProductoInteres__c</fullName>
    <description>Recoge el producto de interés del candidato</description>
    <label>Producto de interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductoInteres</valueSetName>
    </valueSet>
</CustomField>