force-app/main/default/objects/Lead/fields/ReconocimientoDiscapacidad__c.field-meta.xml
<CustomField>
    <fullName>ReconocimientoDiscapacidad__c</fullName>
    <description>Estado del proceso de reconocimiento de la discapacidad</description>
    <label>Reconocimiento discapacidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReconocimientoDiscapacidad</valueSetName>
    </valueSet>
</CustomField>