force-app/main/default/objects/Lead/fields/RecusosSocialesPrevios__c.field-meta.xml
<CustomField>
    <fullName>RecusosSocialesPrevios__c</fullName>
    <description>Indica si hay recursos sociales previos</description>
    <label>Recursos sociales previos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CD</fullName>
                <label>CD/ Centro de día</label>
            </value>
            <value>
                <fullName>Cuidadora/ Interna</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>PCEF</fullName>
                <label>PCEF/ Prestación de cuidados entorno familiar</label>
            </value>
            <value>
                <fullName>PEVS</fullName>
                <label>PEVS/ Cheque servicio prestación económica vincula a servicio</label>
            </value>
            <value>
                <fullName>Pisos tutelados</fullName>
            </value>
            <value>
                <fullName>Residencia</fullName>
            </value>
            <value>
                <fullName>SAD</fullName>
                <label>SAD/ Servicio ayuda a domicilio</label>
            </value>
            <value>
                <fullName>TAD</fullName>
                <label>TAD/ Teleasistencia atención domiciliaria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>