force-app/main/default/objects/Lead/fields/ResidenciasInteres__c.field-meta.xml
<CustomField>
    <fullName>ResidenciasInteres__c</fullName>
    <description>Residencias en las que está interesado el candidato</description>
    <label>Residencias de interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Zona__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Residencias</valueSetName>
    </valueSet>
</CustomField>