force-app/main/default/objects/Lead/fields/RiesgoDeFuga__c.field-meta.xml
<CustomField>
    <fullName>RiesgoDeFuga__c</fullName>
    <description>Nos dice si el residente tiene riesgo de fugarse</description>
    <label>Riesgo de Fuga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>