force-app/main/default/objects/Lead/fields/SeguroDeDefuncion__c.field-meta.xml
<CustomField>
    <fullName>SeguroDeDefuncion__c</fullName>
    <description>Nos dice si el residente tiene seguro de defunción</description>
    <label>¿Seguro de defunción?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>