force-app/main/default/objects/Lead/fields/SolicitudAutorizInternamJudicial__c.field-meta.xml
<CustomField>
    <fullName>SolicitudAutorizInternamJudicial__c</fullName>
    <description>Nos dice si el residente tiene la solicitud de autorización de internamiento judicial</description>
    <label>¿Solicitud autoriz. Internam.Judicial?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>