force-app/main/default/objects/Lead/fields/SondaNasogastrica__c.field-meta.xml
<CustomField>
    <fullName>SondaNasogastrica__c</fullName>
    <description>Nos dice si el residente necesita una sonda nasogástrica</description>
    <label>Sonda Nasogástrica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>