force-app/main/default/objects/Lead/fields/SondaVesical__c.field-meta.xml
<CustomField>
    <fullName>SondaVesical__c</fullName>
    <description>Nos dice si el residente necesita una sonda vesical</description>
    <label>Sonda Vesical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>