force-app/main/default/objects/Lead/fields/Sujeccion__c.field-meta.xml
<CustomField>
    <fullName>Sujeccion__c</fullName>
    <description>Nos dice si el residente necesita sujección</description>
    <label>Sujección</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>