force-app/main/default/objects/Lead/fields/SuplementoNutricional__c.field-meta.xml
<CustomField>
    <fullName>SuplementoNutricional__c</fullName>
    <description>Nos dice si el residente necesita suplemento nutricional</description>
    <label>Suplemento Nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>