force-app/main/default/objects/Lead/fields/TieneProblemasFrecuentesDeMemoria__c.field-meta.xml
<CustomField>
    <fullName>TieneProblemasFrecuentesDeMemoria__c</fullName>
    <description>Nos dice si el residente tiene problemas frecuentes de memoria</description>
    <label>¿Tiene problemas frecuentes de memoria?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>