force-app/main/default/objects/Lead/fields/TipoDieta__c.field-meta.xml
<CustomField>
    <fullName>TipoDieta__c</fullName>
    <description>Campo de tipo área de texto para conocer su tipo de dieta</description>
    <label>¿Tipo de dieta?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>