force-app/main/default/objects/Lead/fields/TipoPanal__c.field-meta.xml
<CustomField>
    <fullName>TipoPanal__c</fullName>
    <description>Campo de tipo lista de selección para conocer el tipo de pañal que utiliza</description>
    <label>¿Qué tipo de pañal?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UsaPanyales__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Día</fullName>
            </value>
            <value>
                <fullName>Noche</fullName>
            </value>
            <value>
                <fullName>Día y Noche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>