force-app/main/default/objects/Lead/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <description>Campo de candidato y contacto donde se indica si el tutor es familiar o entidad</description>
    <label>Tutor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tutor</valueSetName>
    </valueSet>
</CustomField>