force-app/main/default/objects/Lead/fields/UrgenciaPercibida__c.field-meta.xml
<CustomField>
    <fullName>UrgenciaPercibida__c</fullName>
    <description>Urgencia percibida para el ingreso</description>
    <inlineHelpText>No necesario rellenar para plaza pública</inlineHelpText>
    <label>Urgencia percibida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>