force-app/main/default/objects/Lead/fields/UsaPanyales__c.field-meta.xml
<CustomField>
    <fullName>UsaPanyales__c</fullName>
    <description>Nos dice si el residente necesita pañales</description>
    <label>¿Usa Pañales?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>