force-app/main/default/objects/Lead/fields/Vagabundeo__c.field-meta.xml
<CustomField>
    <fullName>Vagabundeo__c</fullName>
    <description>Nos dice si el residente tiene vagabundeo</description>
    <label>Vagabundeo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeleccionNecesidades</valueSetName>
    </valueSet>
</CustomField>