force-app/main/default/objects/Lead/validationRules/EtapaContactadoResidenciadepreferencia.validationRule-meta.xml
<ValidationRule>
    <fullName>EtapaContactadoResidenciadepreferencia</fullName>
    <active>true</active>
    <description>Estado del candidato= Contactado —&gt; Residencia de preferencia debe estar relleno</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status , &apos;Contactado&apos;),
ISBLANK(ResidenciaPreferencia__c))</errorConditionFormula>
    <errorMessage>Para pasar a la etapa Contactado es necesario completar el campo &quot;Residencia de Preferencia&quot;</errorMessage>
</ValidationRule>